--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
+spring.config.import=optional:./private.properties
 spring.application.name=fly_note
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/fly_note
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
-spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/local
+spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@localhost/${MONGO_DB}?authSource=admin
+
+#spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/flynote
+#spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/flynote
 
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
