rename private properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.config.import=optional:./private.properties
+spring.config.import=optional:db.private.properties
 spring.application.name=fly_note
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
